[package]
name = "cupchan"
description = "Simple async overwriting channel between two threads that is wait & block free by swapping cups around"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = ["checkpoint"] }


[package.metadata.nix]
build = true

[workspace.metadata.nix]
nativeBuildInputs = [ "cargo-edit", "pkg-config", "cmake", "gdb" ]

